DB接続と参照まで

--- a/views/index.jade
+++ b/views/index.jade
@@ -6,4 +6,5 @@ html
         link(rel='stylesheet', href='/css/style.css')
     body
         h1= title
-        p Welcom to #{title}
+        p Welcome to #{title}
+        p User: #{userData[0].user_name}
